# matcha

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
cmake/: MatchaConfig.cmake  matcha-engineConfig.cmake
docs/: README.md  _coverpage.md  _sidebar.md  examples.md  gotchas.md  index.html  installation.md  installing.md
docs/benchmarks/: README.md  _sidebar.md  autograd.md  hypotheses.md  jit.md  kernels.md  nn.md  ops.md
docs/dataset/: README.md
docs/engine/: README.md  _sidebar.md
docs/engine/chain/: README.md  executors.md  passes.md  tracing.md
docs/engine/lambda/: README.md  executors.md  passes.md  tracing.md
docs/engine/lambda/passes/: README.md  check.md  constant-propagation.md  copy-propagation.md  dead-code-elimination.md  debug.md  init.md  inline-expansion.md  matmul-fusion.md
docs/engine/op/: README.md  reflection.md
docs/engine/tensor/: README.md  buffer.md
docs/engine/transform/: README.md  binding.md
docs/flow/: README.md  autograd.md  save-load.md
docs/jit/: README.md  autograd.md  save-load.md
docs/media/css/: prism.css
docs/media/js/: prism-custom-cpp.js  prism.js
docs/nn/: callbacks.md  layers.md  losses.md  net.md  optimizers.md
docs/nn/layers/: README.md  _sidebar.md  fc.md  flatten.md  linear.md  relu.md  sigmoid.md  softmax.md  tanh.md
docs/tensor/: README.md  accessing-data.md  autograd.md  basic-arithmetic.md  boolean-arithmetic.md  comparing.md  factories.md  frames.md  generators.md  jit-limitations.md  jit.md  linear-algebra.md  tracing.md  utils.md
docs/tensor/operations/: README.md  _sidebar.md  dtype-promotion.md  elementwise-binary.md  elementwise-unary.md  miscellaneous.md  reduction.md
docs/tutorials/: _sidebar.md
include/: matcha
include/bits_of_matcha/: Backprop.h  Computation.h  Device.h  Dtype.h  Engine.h  Flow.h  Frame.h  Generator.h  Grad.h  Loader.h  Scope.h  Sequence.h  Shape.h  Slice.h  View.h  context.h  data.h  dataset.h  decorators.h  device.h  dtype.h  flow.h  flowHost.h  fn.h  frame.h  grad.h  gradient.h  initializable_fn.h  input.h  object.h  ops.h  params.h  plot.h  plt.h  print.h  random.h  rng.h  shape.h  slice.h  stream.h  (+5 more)
include/bits_of_matcha/data/: Dataset.h  Instance.h  batch.h
include/bits_of_matcha/dataset/: Dataset.h  Instance.h  InstanceIterator.h  csv.h
include/bits_of_matcha/dataset/loaders/: Batch.h  Cat.h  Csv.h  Generator.h  Map.h  Take.h  Tensors.h
include/bits_of_matcha/engine/: Buffer.h  ElementwiseBinary.h  ElementwiseUnary.h  Fold.h  Node.h  NodeBacward.h  Tensor.h  buffer.h  debug.h  elementwiseBinary.h  elementwiseUnary.h  flow.h  flowBuilder.h  flowContext.h  flowloader.h  flowsaver.h  fn.h  fold.h  in.h  inlet.h  input.h  memory.h  node.h  nodeloader.h  nodeserializer.h  object.h  out.h  outlet.h  params.h  pipeBuffers.h  relay.h  status.h  stream.h  tensor.h
include/bits_of_matcha/engine/autograd/: AccumulateGrads.h  Autograd.h  BackCtx.h  GradientTape.h  Partials.h  (+2 more)
include/bits_of_matcha/error/: BroadcastError.h  Error.h  ImplicitCastError.h  IncompatibleDtypesError.h  IncompatibleShapesError.h  error.h
include/bits_of_matcha/fn/: abs.h  add.h  argmax.h  argmaxIn.h  argmin.h  basicArithmetic.h  basic_arithmetic.h  batch.h  booleanArithmetic.h  boolean_arithmetic.h  comparisons.h  divide.h  dot.h  equal.h  exp.h  exponents.h  fold.h  folds.h  gequal.h  greater.h  identity.h  land.h  lequal.h  less.h  lnot.h  lor.h  map.h  matmul.h  max.h  maxAlong.h  maxBetween.h  maxIn.h  min.h  multiply.h  nequal.h  normal.h  reshape.h  slice.h  sqrt.h  square.h  (+3 more)
include/bits_of_matcha/grafana/: Grafana.h
include/bits_of_matcha/macros/: dataset.h  generator.h  varargShape.h  vararg_shape.h  vararg_tensors.h
include/bits_of_matcha/nn/: Callback.h  Layer.h  Layers.h  Loss.h  Net.h  Optimizer.h  SGD.h  Sequential.h  Solver.h  activations.h  initializers.h
include/bits_of_matcha/rng/: bernoulli.h  normal.h  poisson.h  uniform.h
include/bits_of_matcha/savers/: FlowPlot.h  SaveSpec.h  TensorImage.h
include/matcha/: dataset  engine  matcha  nn  tensor
src/: benchmark.cpp  main.cpp  todo.cpp
src/bits_of_matcha/: Backprop.cpp  Device.cpp  Dtype.cpp  Engine.cpp  Flow.cpp  Frame.cpp  Generator.cpp  Grad.cpp  Loader.cpp  Scope.cpp  Sequence.cpp  Shape.cpp  Slice.cpp  View.cpp  context.cpp  data.cpp  dataset.cpp  decorators.cpp  device.cpp  dtype.cpp  flow.cpp  frame.cpp  grad.cpp  gradient.cpp  initializable_fn.cpp  input.cpp  object.cpp  ops.cpp  params.cpp  plot.cpp  plt.cpp  print.cpp  random.cpp  rng.cpp  scope.cpp  shape.cpp  stream.cpp  tensor.cpp  transforms.cpp  tuple.cpp
src/bits_of_matcha/data/: Dataset.cpp  Instance.cpp  batch.cpp
src/bits_of_matcha/dataset/: Dataset.cpp  Instance.cpp  InstanceIterator.cpp  csv.cpp
src/bits_of_matcha/engine/: Buffer.cpp  ElementwiseBinary.cpp  ElementwiseUnary.cpp  Fold.cpp  Node.cpp  Tensor.cpp  buffer.cpp  debug.cpp  elementwiseBinary.cpp  elementwiseUnary.cpp  flow.cpp  flowBuilder.cpp  flowContext.cpp  flowloader.cpp  flowsaver.cpp  fn.cpp  fold.cpp  in.cpp  inlet.cpp  input.cpp  memory.cpp  node.cpp  nodeloader.cpp  nodeserializer.cpp  object.cpp  out.cpp  params.cpp  pipeBuffers.cpp  relay.cpp  status.cpp  stream.cpp  tensor.cpp
src/bits_of_matcha/error/: BroadcastError.cpp  Error.cpp  ImplicitCastError.cpp  IncompatibleDtypesError.cpp  IncompatibleShapesError.cpp
src/bits_of_matcha/fn/: abs.cpp  add.cpp  argmax.cpp  argmaxIn.cpp  argmin.cpp  basicArithmetic.cpp  basic_arithmetic.cpp  batch.cpp  booleanArithmetic.cpp  boolean_arithmetic.cpp  comparisons.cpp  divide.cpp  dot.cpp  equal.cpp  exp.cpp  exponents.cpp  fold.cpp  folds.cpp  gequal.cpp  greater.cpp  identity.cpp  land.cpp  lequal.cpp  less.cpp  lnot.cpp  lor.cpp  map.cpp  matmul.cpp  max.cpp  maxAlong.cpp  maxBetween.cpp  maxIn.cpp  min.cpp  multiply.cpp  nequal.cpp  normal.cpp  reshape.cpp  slice.cpp  sqrt.cpp  square.cpp  (+3 more)
src/bits_of_matcha/grafana/: Grafana.cpp
src/bits_of_matcha/nn/: Layer.cpp  Layers.cpp  Net.cpp  SGD.cpp  Sequential.cpp  activations.cpp
src/bits_of_matcha/rng/: bernoulli.cpp  normal.cpp  poisson.cpp  uniform.cpp
(+343 files in other folders)
